@@ -4,6 +4,10 @@
 
 2014-11-23  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* TextureCoordinateEditor.cpp: 
+
+2014-11-23  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* TextureCoordinateEditor.h:
 	* TextureCoordinateEditor.cpp: 
 
